[package]
name = "geaflow_cstore"
version = "0.1.0"
edition = "2021"
exclude = ["target/"]

[features]
default = ["opendal"]

opendal = ["dep:tokio", "dep:opendal"]
hdfs = ["dep:tokio", "dep:hdrs", "opendal/services-hdfs"]

[dependencies]
bytes = "1.5"
memmap2 = "0.7.1"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf = "3.3.0"
lazy_static = "1.4"
strum = "0.25"
strum_macros = "0.25"
skiplist = "0.5.1"
rand = "0.8.5"
rand_isaac = "0.3.0"
itertools = "0.11.0"
dashmap = "5.5.3"
snap = "1.1.0"
rustc-hash = "1.1.0"
num_enum = "0.6.1"
lz4_flex = "0.11.1"
lz4 = "1.24.0"
chrono = "0.4.31"
flate2 = "1.0.27"
human_bytes = { version = "0.4", features = ["fast"] }
flatbuffers = "23.5.26"
bincode = "1.3.3"
serde = "1.0.188"
serde_json = "1.0.107"
flatc-rust = "0.2.0"
config = "0.13.3"
serde_derive = "1.0.188"
cxx = "1.0"
murmurhash3 = "0.0.5"
rayon = "1.8.0"
crossbeam = "0.8.2"
quick_cache = "0.3.0"
moka = "0.11.3"
thiserror = "1.0.49"
crc32fast = "1.3.2"
sha2 = { version = "0.10", default-features = false }
paste = "1.0.14"
num = "0.4.1"
libc = "0.2"
rocksdb = "0.21.0"
metrics = "0.21.1"
metrics-util = "0.15.0"
metrics-exporter-prometheus = "0.12.1"
hostname = "0.1.5"
thread-id = "4.2.1"
hdrs = { version = "0.3.0", features = ["async_file","vendored"], optional = true }
opendal = {version = "0.43.0", optional = true}
tokio = {version = "1.33.0", features = ["rt-multi-thread", "rt"],  optional = true }
jni = "0.21.1"
tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "local-time"] }
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
color-eyre = "0.5"
uuid = {version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
time = { version = "0.3.30", features = ["local-offset", "macros"] }

[build-dependencies]
prost-build = "0.11.9"
flatc-rust = "0.2.0"
cxx-build = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
path = "benchmark/random/bench_table.rs"
name = "bench_table_with_random_source"
harness = false

[[bench]]
path = "benchmark/random/bench_engine.rs"
name = "bench_store_with_random_source"
harness = false

[[bench]]
path = "benchmark/random/bench_segment.rs"
name = "bench_segment_with_random_source"
harness = false

[[bench]]
path = "benchmark/ldbc/bench_engine.rs"
name = "bench_store_with_ldbc_source"
harness = false

[[bench]]
path = "benchmark/random/bench_mem_index.rs"
name = "bench_mem_index_with_random_source"
harness = false
bench = false

[[bench]]
path = "benchmark/random/bench_serialize.rs"
name = "bench_serialize_with_random_source"
harness = false
bench = false

[[bench]]
path = "benchmark/perfect_hash/bench_hash.rs"
name = "bench_perfect_hash_function"
harness = false
bench = false

[[bench]]
path = "benchmark/perfect_hash/bench_build.rs"
name = "bench_perfect_hash_build"
harness = false
bench = false

[[bench]]
path = "benchmark/perfect_hash/bench_lookup.rs"
name = "bench_perfect_hash_map"
harness = false
bench = false

[profile.dev]
opt-level = 3
debug = false

[profile.test]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
debug = false

[profile.bench]
opt-level = 3
debug = false
